# etf-nieuws-app

./: .env.example  .gitignore  CLAUDE.md  README.md  start.bat
.claude/: settings.local.json
backend/: config.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/src/: models.py
backend/src/aggregation/: service.py
backend/src/api/: models.py  routes.py
backend/src/etf/: client.py  errors.py  parser.py
backend/src/news/: client.py  errors.py
backend/src/storage/: cache.py
backend/tests/: conftest.py  test_aggregation.py  test_cache.py  test_etf_parser.py  test_news_client.py
backend/tests/fixtures/: emim_response.json  iwda_response.json  newsapi_response.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CompanyCard.tsx  Disclaimer.tsx  ETFDashboard.tsx  ErrorBanner.tsx  LoadingSpinner.tsx  NewsItem.tsx
frontend/src/types/: index.ts
